# Gizmos

./: CMakeLists.txt
include/Linear/: Guassian.h  Linear.h  Matrix.h  Matrix2f.h  Matrix3f.h  Matrix4f.h  SquareMatrix.h  Vector.h  Vector2f.h  Vector3f.h  Vector4f.h
include/Linear_1/: Matrix.h  Matrix2f.h  Matrix3f.h  Matrix4f.h  SquareMatrix.h  Vector.h  Vector2f.h  Vector3f.h  Vector4f.h
include/Rendering/: Display.h  Fbo.h  GLErrorCall.h  GLRenderer.h  Light.h  ModelLoader.h  RendererBase.h  Shader.h  StaticMesh.h  StaticRenderer.h  Texture2D.h  Uniform.h  Vao.h  Vbo.h  Vertex.h
include/Transforms/: AABB.h  EulerTransform.cpp  EulerTransform.h  OrthoTransform.h  PerspectiveTransform.h  ScaleTransform.h  Transform.h  TranslationTransform.h  WorldTransform.h
lib/others/: stb_image.h
lib/others/include/: debug_break.h  mem_usage.cpp
src/: main.cpp
src/Linear/: Guassian.cpp  Matrix.cpp  Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  SquareMatrix.cpp  Vector.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
src/Linear_1/: Matrix2f.cpp  Matrix3f.cpp  Matrix4f.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
src/Rendering/: Display.cpp  Fbo.cpp  ModelLoader.cpp  RenderBase.cpp  Shader.cpp  StaticMesh.cpp  StaticRenderer.cpp  Texture2D.cpp  Uniform.cpp  Vao.cpp  Vbo.cpp
src/Transforms/: EulerTransform.cpp  OrthoTransform.cpp  PerspectiveTransform.cpp  ScaleTransform.cpp  Transform.cpp  TranslationTransform.cpp  WorldTransform.cpp  main.cpp
tests/: Linear.h  MainTest.cpp  Matrix.h  MatrixRowTest.cpp  OptimizedMatrixTest.cpp  SquareMatrix.h  TimeReporter.cpp  TimeReporter.h  Vector.h
